# mew-auto

./: .gitattributes  .gitignore  .rustfmt.toml  Cargo.toml  README.md  build.bat  build.rs  setup.bat
.github/workflows/: build.yml
res/: LICENSE.txt  setup-script.iss  setup.iss  windows-reg.reg
src/: main.rs
src/mods/: globals.rs  mod.rs
src/mods/bun/: mod.rs
src/mods/game/: mod.rs
src/mods/monitor/: mod.rs
src/mods/process/: mod.rs
src/mods/threads/: bun.rs  game.rs  mod.rs  monitor.rs  tray.rs  voice.rs
src/mods/trayicon/: mod.rs
src/mods/utils/: constants.rs  hash.rs  mod.rs  msgbox.rs  path.rs  store.rs  string.rs
src/mods/voice/: mod.rs
voice/: build.bat  main.py
